--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,15 +16,18 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        
     steps:
     - uses: actions/checkout@v3
     - name: Install poetry
       run: pipx install poetry
-    - name: Set up Python 3.8
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: "3.8"
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
