--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,12 +23,13 @@ jobs:
         
     steps:
     - uses: actions/checkout@v4
-    - name: Install poetry
-      run: pipx install poetry
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+      run: which poetry
+    - name: Install poetry
+      run: pipx install poetry
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
