fixed typo on linux -> latest

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,7 +16,7 @@ permissions:
 jobs:
 
   pythons:
-    runs-on: ubuntu-linux
+    runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.set-pythons.outputs.matrix }}
     steps:
