--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,6 +26,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    needs: pythons
     strategy:
       matrix:
         python-version: ${{fromJson(needs.set-pythons.outputs.matrix)}}
