missed a word there.

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,7 +18,7 @@ jobs:
   pythons:
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.set-pythons.outputs.pythons }}
+      pythons: ${{ steps.set-pythons.outputs.pythons }}
     steps:
     - id: set-pythons
       run: |
