added json conversion.

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
     needs: pythons
     strategy:
       matrix:
-        python-version: ${{needs.pythons.outputs.versions}}
+        python-version: ${{ fromJson(needs.pythons.outputs.versions) }}
 
     steps:
     - uses: actions/checkout@v4
